@@ -106,6 +106,8 @@
           <compilerArgs>
             <arg>--add-exports</arg>
             <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
           </compilerArgs>
           <!-- https://stackoverflow.com/a/30472473 -->
           <fork>true</fork>
@@ -154,8 +156,9 @@
         <configuration>
           <argLine>
             -Xmx4G
-            --add-modules jdk.incubator.vector
-            --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED
+            --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED
+            --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
             -javaagent:${project.build.directory}/vavi-instrumentation.jar
             -Dvavix.lang.instrumentation.VaviInstrumentation.1=vavix.lang.instrumentation.PropertiesClassFileTransformer
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
@@ -447,9 +450,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer -->
+      <groupId>vavi</groupId> <!-- com.github.umjammer / vavi -->
       <artifactId>vavi-util-screenscraping</artifactId>
-      <version>1.0.14</version>
+      <version>1.0.15-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
 
@@ -463,7 +466,7 @@
     <dependency>
       <groupId>com.github.umjammer.vavi-commons</groupId>
       <artifactId>vavi-instrumentation</artifactId>
-      <version>1.1.12</version>
+      <version>1.1.14</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
